examples/invalid/typechecking/duplicateTypeSig.ordinis
foo : Int64
foo = 5

foo : Int64
